--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
       context: .
       dockerfile: Dockerfile
     # -------- replace with comment to run with gunicorn --------
-    # command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-    command: gunicorn app.main:app -w 4 -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    # command: gunicorn app.main:app -w 4 -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000
     env_file:
       - ./src/.env
     # -------- replace with comment if you are using nginx --------
@@ -88,6 +88,20 @@ services:
       - db
       - web
     command: python -m src.scripts.create_first_superuser
+    volumes:
+      - ./src:/code/src
+
+  # -------- uncomment to create secuencias --------
+  create_sequences:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file:
+      - ./src/.env
+    depends_on:
+      - db
+      - web
+    command: python -m src.scripts.create_secuencias
     volumes:
       - ./src:/code/src
 
