--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ faker = "^26.0.0"
 psycopg2-binary = "^2.9.9"
 pytest-mock = "^3.14.0"
 requests = "^2.32.3"
+pytz = "^2024.2"
 
 [build-system]
 requires = ["poetry-core"]
