--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
       context: .
       dockerfile: Dockerfile
     # -------- replace with comment to run with gunicorn --------
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-    # command: gunicorn app.main:app -w 4 -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000
+    # command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    command: gunicorn app.main:app -w 4 -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000
     env_file:
       - ./src/.env
     # -------- replace with comment if you are using nginx --------
@@ -106,18 +106,18 @@ services:
       - ./src:/code/src
 
   #-------- uncomment to run tests --------
-  pytest:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    env_file:
-      - ./src/.env
-    depends_on:
-      - db
-      - redis
-    command: python -m pytest ./tests
-    volumes:
-      - .:/code
+#  pytest:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    env_file:
+#      - ./src/.env
+#    depends_on:
+#      - db
+#      - redis
+#    command: python -m pytest ./tests
+#    volumes:
+#      - .:/code
 
   #-------- uncomment to create first tier --------
   # create_tier:
