--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,9 @@ pytest-mock = "^3.14.0"
 requests = "^2.32.3"
 pytz = "^2024.2"
 
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.8"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
